--- a/src/main/resources/fxml/AskGodFromListPassive.fxml
+++ b/src/main/resources/fxml/AskGodFromListPassive.fxml
@@ -5,7 +5,13 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.StackPane?>
+<?import javafx.scene.layout.VBox?>
+
 <StackPane prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.polimi.ingsw.client.ui.gui.guicontrollers.AskGodFromListPassiveController">
    <children>
       <AnchorPane id="GradientPane" prefHeight="200.0" prefWidth="200.0" />
@@ -24,8 +30,8 @@
          <children>
             <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
                <children>
-                  <Label fx:id="waitPromptLabel" alignment="TOP_CENTER" contentDisplay="CENTER" maxHeight="204.0" maxWidth="827.0" prefHeight="70.0" prefWidth="827.0" styleClass="h1" text="AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAEWWWWWWWWWWWWWWWWWWWWWWWWWWWWWwAAAAAAA" wrapText="true" />
-                  <Label styleClass="h3" text="%wait_player_choose_god_prompt" />
+                  <Label fx:id="waitPromptLabel" alignment="TOP_CENTER" contentDisplay="CENTER" maxHeight="204.0" maxWidth="827.0" prefHeight="70.0" prefWidth="827.0" styleClass="h1" text="AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAEWWWWWWWWWWWWWWWWWWWWWWWWWWWWWwAAAAAAA" wrapText="true" VBox.vgrow="ALWAYS" />
+                  <Label styleClass="h3" text="%wait_player_choose_god_prompt" VBox.vgrow="ALWAYS" />
                   <AnchorPane prefHeight="316.0" prefWidth="930.0" VBox.vgrow="NEVER">
                      <children>
                         <ImageView fx:id="loadingTower" fitHeight="500.0" fitWidth="140.0" layoutX="395.0" pickOnBounds="true" preserveRatio="true" smooth="false" AnchorPane.bottomAnchor="2.0">
