--- a/src/main/resources/fxml/AskStartPlayer.fxml
+++ b/src/main/resources/fxml/AskStartPlayer.fxml
@@ -3,7 +3,13 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.StackPane?>
+<?import javafx.scene.layout.VBox?>
+
 <StackPane prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.polimi.ingsw.client.ui.gui.guicontrollers.AskStartPlayerController">
    <children>
       <AnchorPane id="GradientPane" prefHeight="200.0" prefWidth="200.0" />
@@ -22,10 +28,10 @@
          <children>
             <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
                <children>
-                  <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="128.0" prefWidth="991.0" styleClass="h1" text="%choose_the_player_that_will_start_first" textAlignment="CENTER" wrapText="true" />
-                  <Label styleClass="h3" text="%ask_start_player_prompt">
+                  <Label alignment="BOTTOM_CENTER" contentDisplay="CENTER" maxHeight="150.0" prefHeight="128.0" prefWidth="991.0" styleClass="h1" text="%choose_the_player_that_will_start_first" textAlignment="CENTER" wrapText="true" VBox.vgrow="ALWAYS" />
+                  <Label alignment="TOP_CENTER" maxHeight="80.0" styleClass="h3" text="%ask_start_player_prompt" wrapText="true" VBox.vgrow="ALWAYS">
                      <VBox.margin>
-                        <Insets bottom="30.0" />
+                        <Insets bottom="30.0" top="30.0" />
                      </VBox.margin>
                   </Label>
                   <Label fx:id="errorLabel" prefHeight="26.0" prefWidth="516.0" styleClass="error-message" text="If you ever see this message... I've f'd up real good">
