--- a/src/main/resources/fxml/AskStartPlayerPassive.fxml
+++ b/src/main/resources/fxml/AskStartPlayerPassive.fxml
@@ -6,7 +6,13 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.StackPane?>
+<?import javafx.scene.layout.VBox?>
+
 <StackPane prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.polimi.ingsw.client.ui.gui.guicontrollers.AskStartPlayerPassiveController">
    <children>
       <AnchorPane id="GradientPane" prefHeight="200.0" prefWidth="200.0" />
@@ -25,10 +31,10 @@
          <children>
             <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
                <children>
-                  <Label fx:id="welcomeLabel" alignment="CENTER" contentDisplay="CENTER" prefHeight="83.0" prefWidth="880.0" styleClass="h1" text="Placeholder Text" />
-                  <Label styleClass="h3" text="%ask_start_player_prompt">
+                  <Label fx:id="welcomeLabel" alignment="BASELINE_CENTER" contentDisplay="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="83.0" prefWidth="880.0" styleClass="h1" text="Voluptatem tempore reiciendis reiciendis ut rem dolores. Non praesentium eaque aut assumenda omnis est omnis saepe. Quia debitis magnam est minus et." textAlignment="CENTER" wrapText="true" VBox.vgrow="ALWAYS" />
+                  <Label alignment="TOP_CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" styleClass="h3" text="%ask_start_player_prompt" VBox.vgrow="ALWAYS">
                      <VBox.margin>
-                        <Insets bottom="60.0" />
+                        <Insets />
                      </VBox.margin>
                   </Label>
                   <AnchorPane prefHeight="316.0" prefWidth="930.0" VBox.vgrow="NEVER">
