--- a/src/main/resources/fxml/LoseGame.fxml
+++ b/src/main/resources/fxml/LoseGame.fxml
@@ -1,9 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.text.Font?>
+
 <StackPane prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.polimi.ingsw.client.ui.gui.guicontrollers.LoseGameController">
    <children>
       <AnchorPane id="VerticalGradientPane" prefHeight="200.0" prefWidth="200.0" />
@@ -29,15 +35,15 @@
                   <Insets />
                </GridPane.margin>
             </Button>
-            <Label fx:id="mainPrompt" alignment="CENTER" contentDisplay="CENTER" prefHeight="164.0" prefWidth="868.0" styleClass="h1" text="%you_lost" textAlignment="CENTER" textFill="WHITE" textOverrun="CLIP" wrapText="true" GridPane.halignment="CENTER" GridPane.hgrow="SOMETIMES">
+            <Label fx:id="mainPrompt" alignment="CENTER" contentDisplay="CENTER" maxHeight="1.7976931348623157E308" prefHeight="164.0" prefWidth="868.0" styleClass="h1" text="%you_lost" textFill="WHITE" textOverrun="CLIP" wrapText="true" GridPane.halignment="CENTER" GridPane.hgrow="SOMETIMES" GridPane.vgrow="ALWAYS">
                <font>
                   <Font size="57.0" />
                </font>
                <GridPane.margin>
-                  <Insets top="30.0" />
+                  <Insets />
                </GridPane.margin>
             </Label>
-            <Label fx:id="winnerName" alignment="CENTER" contentDisplay="CENTER" styleClass="h3" text="%do_you_want_to_keep_watching_the_game" GridPane.halignment="CENTER" GridPane.rowIndex="1">
+            <Label fx:id="winnerName" alignment="CENTER" contentDisplay="CENTER" maxHeight="1.7976931348623157E308" styleClass="h3" text="%do_you_want_to_keep_watching_the_game" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.vgrow="ALWAYS">
                <GridPane.margin>
                   <Insets />
                </GridPane.margin>
