--- a/src/main/resources/fxml/SetNickname.fxml
+++ b/src/main/resources/fxml/SetNickname.fxml
@@ -1,8 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.StackPane?>
+<?import javafx.scene.layout.VBox?>
+
 <StackPane prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.polimi.ingsw.client.ui.gui.guicontrollers.SetNicknameController">
    <children>
       <AnchorPane id="GradientPane" prefHeight="200.0" prefWidth="200.0" />
@@ -21,8 +29,8 @@
          <children>
             <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
                <children>
-                  <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="83.0" prefWidth="880.0" styleClass="h1" text="%server_found" textAlignment="CENTER" />
-                  <Label styleClass="h3" text="%nickname_prompt">
+                  <Label alignment="CENTER" contentDisplay="CENTER" maxHeight="1.7976931348623157E308" prefHeight="83.0" prefWidth="880.0" styleClass="h1" text="%server_found" textAlignment="CENTER" VBox.vgrow="ALWAYS" />
+                  <Label maxHeight="1.7976931348623157E308" styleClass="h3" text="%nickname_prompt" VBox.vgrow="ALWAYS">
                      <VBox.margin>
                         <Insets bottom="60.0" />
                      </VBox.margin>
