--- a/src/main/resources/fxml/SetPlayersCount.fxml
+++ b/src/main/resources/fxml/SetPlayersCount.fxml
@@ -1,8 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.StackPane?>
+<?import javafx.scene.layout.VBox?>
+
 <StackPane prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.polimi.ingsw.client.ui.gui.guicontrollers.SetPlayersCountController">
    <children>
       <AnchorPane id="GradientPane" prefHeight="200.0" prefWidth="200.0" />
@@ -21,13 +29,8 @@
          <children>
             <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
                <children>
-                  <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="128.0" prefWidth="640.0" styleClass="h1" text="%you_are_the_first_player_in_the_server" textAlignment="CENTER" wrapText="true" />
-                  <Label styleClass="h3" text="%players_count_prompt">
-                     <VBox.margin>
-                        <Insets bottom="30.0" />
-                     </VBox.margin>
-                  </Label>
-                  <Label fx:id="errorLabel" prefHeight="26.0" prefWidth="516.0" styleClass="error-message" text="If you ever see this message... I've f'd up real good">
+                  <Label alignment="CENTER" contentDisplay="CENTER" maxHeight="150.0" maxWidth="1.7976931348623157E308" prefHeight="128.0" prefWidth="640.0" styleClass="h1" text="%you_are_the_first_player_in_the_server" textAlignment="CENTER" wrapText="true" VBox.vgrow="ALWAYS" />
+                  <Label alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" styleClass="h3" text="%players_count_prompt" VBox.vgrow="ALWAYS">
                      <VBox.margin>
                         <Insets bottom="30.0" />
                      </VBox.margin>
@@ -41,7 +44,15 @@
                         </Button>
                         <Button fx:id="threePlayersButton" maxWidth="400.0" minHeight="100.0" mnemonicParsing="false" onAction="#threePlayersSelected" prefHeight="60.0" prefWidth="400.0" styleClass="bigbutton" text="%three_players" />
                      </children>
+                     <VBox.margin>
+                        <Insets top="20.0" />
+                     </VBox.margin>
                   </HBox>
+                  <Label fx:id="errorLabel" alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="26.0" prefWidth="516.0" styleClass="error-message" text="If you ever see this message... I've f'd up real good" VBox.vgrow="ALWAYS">
+                     <VBox.margin>
+                        <Insets bottom="30.0" />
+                     </VBox.margin>
+                  </Label>
                </children>
             </VBox>
             <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="2" GridPane.rowIndex="2">
