chore: reorder CSS files

--- a/src/main/resources/css/board.css
+++ b/src/main/resources/css/board.css
@@ -1,9 +1,13 @@
 .player-lateral-label-active {
-    -fx-background-color: #FFFFFF22;
+    -fx-background-color: #FFFFFF33;
+    -fx-border-color: #F2A541;
+    -fx-border-width: 0 0 4px 4px;
 }
 
 .player-lateral-label-passive {
     -fx-background-color: #FFFFFF11;
+    -fx-border-color: #133C55;
+    -fx-border-width: 0 0 4px 4px;
 }
 
 .player-lateral-name-passive {
