feat: add god card appearing when clicking player label in game

--- a/src/main/resources/fxml/LateralGodCard.fxml
+++ b/src/main/resources/fxml/LateralGodCard.fxml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -10,12 +9,16 @@
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
 
-
 <fx:root fx:id="rootPane" alignment="CENTER_LEFT" prefHeight="720.0" prefWidth="1280.0" type="StackPane" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <AnchorPane id="gradient-pane" fx:id="gradientPane" onMouseClicked="#reverse" prefHeight="200.0" prefWidth="200.0" />
       <VBox id="vboxview" fx:id="cardPane" alignment="CENTER_LEFT" maxHeight="1.7976931348623157E308" maxWidth="937.0" pickOnBounds="false" prefHeight="720.0" prefWidth="937.0">
          <children>
+            <Label fx:id="topLabel" styleClass="h1" text="Label">
+               <VBox.margin>
+                  <Insets bottom="15.0" left="67.0" />
+               </VBox.margin>
+            </Label>
             <HBox fx:id="godText" spacing="40.0">
                <VBox.margin>
                   <Insets bottom="30.0" />
@@ -42,11 +45,6 @@
                   <Insets left="70.0" />
                </padding>
             </HBox>
-            <Button mnemonicParsing="false" onAction="#selectGod" prefHeight="56.0" prefWidth="302.0" styleClass="bigbutton" text="Select God Card">
-               <VBox.margin>
-                  <Insets left="35.0" />
-               </VBox.margin>
-            </Button>
          </children>
       </VBox>
    </children>
