--- a/src/main/resources/fxml/Settings.fxml
+++ b/src/main/resources/fxml/Settings.fxml
@@ -1,8 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
@@ -12,7 +10,7 @@
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
 
-<StackPane prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.polimi.ingsw.client.ui.gui.guicontrollers.SettingsController">
+<StackPane id="root" prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.polimi.ingsw.client.ui.gui.guicontrollers.SettingsController">
    <children>
       <AnchorPane id="GradientPane" prefHeight="200.0" prefWidth="200.0" />
       <AnchorPane id="DarkenPane" prefHeight="400.0" prefWidth="600.0" />
@@ -30,16 +28,8 @@
          <children>
             <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0" spacing="60.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
                <children>
-                  <HBox alignment="CENTER_RIGHT" prefHeight="100.0" prefWidth="300.0" spacing="40.0">
-                     <children>
-                        <ChoiceBox fx:id="languageChoiceBox" prefWidth="150.0" />
-                        <Label styleClass="h3" text="%game_language" HBox.hgrow="ALWAYS">
-                           <HBox.margin>
-                              <Insets right="20.0" />
-                           </HBox.margin>
-                        </Label>
-                     </children>
-                  </HBox>
+                  <Label styleClass="h3" text="%game_language" />
+                  <HBox fx:id="languageButtons" alignment="CENTER" prefHeight="100.0" prefWidth="200.0" spacing="20.0" />
                   <Button mnemonicParsing="false" onAction="#saveSettings" styleClass="bigbutton" text="%save_settings" />
                </children>
             </VBox>
